<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6DE95"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/tvProfileRankingPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ranking_position_string"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvProfileScore"
        app:layout_constraintTop_toBottomOf="@+id/tvProfileScore" />

    <Button
        android:id="@+id/btnBackProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/back_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/btnGotoDeleteAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/delete_account_string"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.81" />

    <ImageView
        android:id="@+id/ivProfilePhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/username_string"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ivProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePhoto" />

    <Button
        android:id="@+id/btnGotoChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/change_password_string"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71000004" />

    <TextView
        android:id="@+id/tvProfileBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/birthdate_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@id/tvProfileEmail"
        app:layout_constraintTop_toBottomOf="@id/tvProfileEmail" />

    <TextView
        android:id="@+id/tvProfileScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/score_string"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePhoto"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePhoto"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePhoto"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/btnGotoChangeEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/change_email_string"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btnGotoChangePassword"
        app:layout_constraintTop_toTopOf="@+id/btnGotoChangePassword" />

    <TextView
        android:id="@+id/tvProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/email_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@id/tvProfileUsername"
        app:layout_constraintTop_toBottomOf="@id/tvProfileUsername" />

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_string"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivProfilePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChangeProfilePhoto"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="📤"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/ivProfilePhoto"
        app:layout_constraintStart_toStartOf="@+id/ivProfilePhoto"
        app:layout_constraintTop_toBottomOf="@+id/ivProfilePhoto" />
</androidx.constraintlayout.widget.ConstraintLayout>