<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="370dp"
    android:layout_marginBottom="15dp"
    android:background="@drawable/textbox"
    android:backgroundTint="@color/colorPrimary">

    <Button
        android:id="@+id/btnDeleteGame"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@android:color/background_dark"
        android:text="❌"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/pbSpeedGame"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:progress="40"
        android:progressTint="#FDD835"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvHealthGame"
        app:layout_constraintTop_toBottomOf="@+id/tvSpeedGame" />

    <ProgressBar
        android:id="@+id/pbAttackGame"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:progress="20"
        android:progressTint="@android:color/holo_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvHealthGame"
        app:layout_constraintTop_toBottomOf="@+id/tvAttackGame" />

    <ProgressBar
        android:id="@+id/pbDefenseGame"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:progress="50"
        android:progressTint="@android:color/holo_blue_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvHealthGame"
        app:layout_constraintTop_toBottomOf="@+id/tvDefenseGame" />

    <ProgressBar
        android:id="@+id/pbHealingGame"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:progress="90"
        android:progressTint="@android:color/holo_green_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvHealthGame"
        app:layout_constraintTop_toBottomOf="@+id/tvHealingGame" />

    <ProgressBar
        android:id="@+id/pbHealthGame"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:progress="75"
        android:progressTint="@android:color/holo_red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvHealthGame"
        app:layout_constraintTop_toBottomOf="@+id/tvHealthGame" />

    <TextView
        android:id="@+id/tvSpeedGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/speed_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/tvCreatedDateTimeGame"
        app:layout_constraintTop_toBottomOf="@+id/tvHealingGame" />

    <TextView
        android:id="@+id/tvHealingGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/healing_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/tvCreatedDateTimeGame"
        app:layout_constraintTop_toBottomOf="@+id/tvDefenseGame" />

    <TextView
        android:id="@+id/tvDefenseGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/defense_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/tvCreatedDateTimeGame"
        app:layout_constraintTop_toBottomOf="@+id/tvAttackGame" />

    <TextView
        android:id="@+id/tvBoughtAtOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/score_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvCreatedDateTimeGame" />

    <TextView
        android:id="@+id/tvCreatedDateTimeGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ellipsize="marquee"
        android:lines="2"
        android:singleLine="true"
        android:text="@string/created_at_on_string"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/tvNameOrder"
        app:layout_constraintTop_toBottomOf="@+id/tvNameOrder" />

    <TextView
        android:id="@+id/tvNameOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/last_access_at_on_string"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionOrder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:lines="2"
        android:text="@string/map_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/tvCreatedDateTimeGame"
        app:layout_constraintTop_toBottomOf="@+id/tvCreatedDateTimeGame" />

    <TextView
        android:id="@+id/tvHealthGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/health_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/tvCreatedDateTimeGame"
        app:layout_constraintTop_toBottomOf="@+id/tvDescriptionOrder" />

    <TextView
        android:id="@+id/tvAttackGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/attack_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="@+id/tvCreatedDateTimeGame"
        app:layout_constraintTop_toBottomOf="@+id/tvHealthGame" />

    <TextView
        android:id="@+id/tvPriceOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/coins_string"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="@+id/tvBoughtAtOn"
        app:layout_constraintTop_toBottomOf="@+id/tvBoughtAtOn" />


</androidx.constraintlayout.widget.ConstraintLayout>
